--- a/en/index.html
+++ b/en/index.html
@@ -1,24 +1,48 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paloma Aguado | Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Quitamos subrayados feos */
+        /* 1. RESET Y ESTILOS BASE */
         nav a, .project-card a {
             text-decoration: none !important;
         }
 
-        /* Franja superior Gris Carbón */
         .top-line {
             background-color: #2c2c2c;
             height: 12px;
             width: 100%;
         }
 
-        /* Estilo para los nombres de las secciones */
+        /* 2. HEADER Y NAVEGACIÓN (CORREGIDO) */
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 30px 5%;
+        }
+
+        .logo {
+            font-weight: bold;
+            letter-spacing: 2px;
+            font-size: 1.2rem;
+            color: #2c2c2c;
+        }
+
+        nav a {
+            color: #2c2c2c;
+            font-size: 0.8rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            transition: opacity 0.3s;
+        }
+
+        nav a:hover { opacity: 0.6; }
+
+        /* 3. SECCIONES */
         .section-title {
             font-size: 1.1rem;
             text-transform: uppercase;
@@ -29,7 +53,6 @@
             border-left: 3px solid #2c2c2c;
         }
 
-        /* Grid de 2 columnas por sección */
         .gallery-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -37,23 +60,66 @@
             padding: 0 5% 50px 5%;
         }
 
-        /* Forzamos alineación de las tarjetas */
+        /* 4. EFECTO OVERLAY (ESTO ES LO QUE FALTABA) */
         .project-card {
             height: 500px;
             overflow: hidden;
-            position: relative;
-            margin-bottom: 0 !important; 
+            position: relative; /* Necesario para el overlay absoluto */
+            background-color: #eee;
         }
 
         .project-card img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: transform 0.6s cubic-bezier(0.25, 1, 0.5, 1);
         }
 
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro suave */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            opacity: 0; /* Oculto por defecto */
+            transition: opacity 0.4s ease;
+        }
+
+        .project-card:hover .overlay {
+            opacity: 1; /* Aparece al pasar el ratón */
+        }
+
+        .project-card:hover img {
+            transform: scale(1.05); /* Zoom suave */
+        }
+
+        .overlay .text {
+            color: white;
+            text-align: center;
+            font-family: sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-size: 1rem;
+            line-height: 1.5;
+        }
+
+        .overlay .text span {
+            display: block;
+            font-size: 0.7rem;
+            margin-top: 10px;
+            font-style: italic;
+            opacity: 0.8;
+        }
+
+        /* 5. RESPONSIVE */
         @media (max-width: 768px) {
             .gallery-grid { grid-template-columns: 1fr; }
             .project-card { height: 350px; }
+            .overlay { opacity: 1; background-color: rgba(0,0,0,0.3); } /* En móvil se ve siempre un poco */
         }
     </style>
 </head>
@@ -63,9 +129,9 @@
     <header>
         <div class="logo">PALOMA AGUADO</div>
         <nav>
-            <a href="/palomaaguado.github.io/en/contact.html">Contacto</a> 
+            <a href="/palomaaguado.github.io/en/contact.html">Contact</a> 
             <span style="margin: 0 10px; color: #ccc;">|</span>
-            <a href="/palomaaguado.github.io/es/index.html">English</a>
+            <a href="/palomaaguado.github.io/es/index.html">Español</a>
         </nav>
     </header>
 
@@ -124,11 +190,11 @@
             </div>
         </div>
 
-        <h2 class="section-title">Storytelling visual e IA</h2>
+        <h2 class="section-title">Visual Storytelling & AI</h2>
         <div class="gallery-grid">
             <div class="project-card">
                 <a href="/palomaaguado.github.io/en/cuento-leo.html">
-                    <img src="/palomaaguado.github.io/es/proyectos/leo1.png" alt="Leo - Cuento Ilustrado">
+                    <img src="/palomaaguado.github.io/es/proyectos/leo1.png" alt="Leo">
                     <div class="overlay">
                         <div class="text">
                             Leo<br>
@@ -139,12 +205,12 @@
             </div>
 
             <div class="project-card">
-                <a href="/palomaaguado.github.io/es/cuento-alexa.html">
-                    <img src="../es/proyectos/alexa_portada.jpg" alt="Alexa - Cuento Ilustrado">
+                <a href="/palomaaguado.github.io/en/cuento-alexa.html">
+                    <img src="/palomaaguado.github.io/es/proyectos/alexa_portada.jpg" alt="Alexa">
                     <div class="overlay">
                         <div class="text">
                             Alexa<br>
-                            <span>Visual Storytelling & IA</span>
+                            <span>Visual Storytelling & AI</span>
                         </div>
                     </div>
                 </a>
