--- a/en/index.html
+++ b/en/index.html
@@ -193,7 +193,7 @@
         <h2 class="section-title">Visual Storytelling & AI</h2>
         <div class="gallery-grid">
             <div class="project-card">
-                <a href="/palomaaguado.github.io/en/cuento-leo.html">
+                <a href="/palomaaguado.github.io/en/leos-story.html">
                     <img src="/palomaaguado.github.io/es/proyectos/leo1.png" alt="Leo">
                     <div class="overlay">
                         <div class="text">
