--- a/es/index.html
+++ b/es/index.html
@@ -140,7 +140,7 @@
 
             <div class="project-card">
                 <a href="/palomaaguado.github.io/es/cuento-alexa.html">
-                    <img src="../es/proyectos/alexa_portada.jpg" alt="Alexa - Cuento Ilustrado">
+                    <img src="../es/proyectos/alexa1.png" alt="Alexa - Cuento Ilustrado">
                     <div class="overlay">
                         <div class="text">
                             Alexa<br>
