--- a/es/cuento-alexa.html
+++ b/es/cuento-alexa.html
@@ -141,8 +141,8 @@
         <div class="book" id="book">
             
             <div class="paper" id="p1" style="z-index: 8;" onclick="flip(1)">
-                <div class="front"><img src="/palomaaguado.github.io/es/proyectos/alexa1.jpg" class="full-img"></div>
-                <div class="back"><img src="/palomaaguado.github.io/es/proyectos/alexa2.jpg" class="full-img"></div>
+                <div class="front"><img src="/palomaaguado.github.io/es/proyectos/alexa1.png" class="full-img"></div>
+                <div class="back"><img src="/palomaaguado.github.io/es/proyectos/alexa2.png" class="full-img"></div>
             </div>
 
             <div class="paper" id="p2" style="z-index: 7;" onclick="flip(2)">
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="back"><img src="/palomaaguado.github.io/es/proyectos/alexa3.jpg" class="full-img"></div>
+                <div class="back"><img src="/palomaaguado.github.io/es/proyectos/alexa3.png" class="full-img"></div>
             </div>
 
             <div class="paper" id="p4" style="z-index: 5;" onclick="flip(4)">
@@ -184,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="back"><img src="/palomaaguado.github.io/es/proyectos/alexa16.jpg" class="full-img"></div>
+                <div class="back"><img src="/palomaaguado.github.io/es/proyectos/alexa16.png" class="full-img"></div>
             </div>
 
         </div>
