--- a/es/cuento-alexa.html
+++ b/es/cuento-alexa.html
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="back"><img src="/palomaaguado.github.io/es/proyectos/alexa2.jpg" class="full-img"></div>
+                <div class="back"><img src="/palomaaguado.github.io/es/proyectos/alexa2.png" class="full-img"></div>
             </div>
 
             <div class="paper" id="p3" style="z-index: 6;" onclick="flip(3)">
