--- a/es/cuento-alexa.html
+++ b/es/cuento-alexa.html
@@ -165,7 +165,7 @@
                             Alexa es un relato visual nacido bajo el cielo de invierno. Es la historia de una niña cuya curiosidad es capaz de derretir el hielo y encontrar magia en los rincones más gélidos de su mundo.
                         </div>
                         <div class="page-text">
-                            A través de este álbum ilustrado, exploramos la mirada infantil: esa capacidad de ver un reino entero donde otros solo ven nieve, y de encontrar calidez en el silencio de un bosque dormido.
+                            A través de este cuento ilustrado, exploramos la mirada infantil: esa capacidad de ver un reino entero donde otros solo ven nieve, y de encontrar calidez en el silencio de una ciudad dormida.
                         </div>
                         <div class="page-text" style="font-size: 0.8rem; text-transform: uppercase; letter-spacing: 1px; font-style: normal; color: var(--accent); margin-top: 10px;">
                             Escrito por Carol Vila Micó<br>Ilustrado por Paloma Aguado
