--- a/en/index.html
+++ b/en/index.html
@@ -205,8 +205,8 @@
             </div>
 
             <div class="project-card">
-                <a href="/palomaaguado.github.io/en/cuento-alexa.html">
-                    <img src="/palomaaguado.github.io/es/proyectos/alexa_portada.jpg" alt="Alexa">
+                <a href="/palomaaguado.github.io/en/alexas-story.html">
+                    <img src="/palomaaguado.github.io/es/proyectos/alexa1.png" alt="Alexa">
                     <div class="overlay">
                         <div class="text">
                             Alexa<br>
