--- a/es/index.html
+++ b/es/index.html
@@ -49,6 +49,11 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: transform 0.5s ease;
+        }
+
+        .project-card:hover img {
+            transform: scale(1.05);
         }
 
         @media (max-width: 768px) {
@@ -96,6 +101,23 @@
                 </a>
             </div>
         </div> 
+
+        <h2 class="section-title">Advertising & Case Studies</h2>
+        <div class="gallery-grid">
+            <div class="project-card">
+                <a href="/palomaaguado.github.io/es/mazda.html">
+                    <img src="/palomaaguado.github.io/es/proyectos/alexa2.png" alt="Mazda Case Study"> <div class="overlay">
+                        <div class="text">
+                            Mazda Skyactiv-X<br>
+                            <span>Estrategia de Medios & Creatividad</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="project-card" style="background-color: #f9f9f9; display: flex; align-items: center; justify-content: center;">
+                <span style="color: #ccc; letter-spacing: 2px; font-size: 0.8rem; text-transform: uppercase;">Próximo Proyecto</span>
+            </div>
+        </div>
 
         <h2 class="section-title">Estrategia Inmobiliaria</h2>
         <div class="gallery-grid">
