--- a/es/index.html
+++ b/es/index.html
@@ -102,7 +102,7 @@
             </div>
         </div> 
 
-        <h2 class="section-title">Advertising & Case Studies</h2>
+        <h2 class="section-title">Publicidad & Casos de Estudio</h2>
         <div class="gallery-grid">
             <div class="project-card">
                 <a href="/palomaaguado.github.io/es/mazda.html">
