--- a/es/index.html
+++ b/es/index.html
@@ -118,7 +118,17 @@
                 <span style="color: #ccc; letter-spacing: 2px; font-size: 0.8rem; text-transform: uppercase;">Próximo Proyecto</span>
             </div>
         </div>
-
+<div class="project-card">
+    <a href="/palomaaguado.github.io/es/caixabank.html">
+        <img src="/palomaaguado.github.io/es/proyectos/caixa1.png" alt="CaixaBank Case Study">
+        <div class="overlay">
+            <div class="text">
+                CaixaBank: Vive la Música<br>
+                <span>Estrategia de Medios & Experiencia IA</span>
+            </div>
+        </div>
+    </a>
+</div>
         <h2 class="section-title">Estrategia Inmobiliaria</h2>
         <div class="gallery-grid">
             <div class="project-card">
