--- a/es/index.html
+++ b/es/index.html
@@ -106,7 +106,8 @@
         <div class="gallery-grid">
             <div class="project-card">
                 <a href="/palomaaguado.github.io/es/mazda.html">
-                    <img src="/palomaaguado.github.io/es/proyectos/mazda1.jpg" alt="Mazda Case Study"> <div class="overlay">
+                    <img src="/palomaaguado.github.io/es/proyectos/mazda1.png" alt="Mazda Case Study"> 
+                    <div class="overlay">
                         <div class="text">
                             Mazda Skyactiv-X<br>
                             <span>Estrategia de Medios & Creatividad</span>
@@ -114,19 +115,19 @@
                     </div>
                 </a>
             </div>
-            <div class="project-card">
-    <a href="/palomaaguado.github.io/es/caixabank.html">
-        <img src="/palomaaguado.github.io/es/proyectos/caixa1.png" alt="CaixaBank Case Study">
-        <div class="overlay">
-            <div class="text">
-                CaixaBank: Vive la Música<br>
-                <span>Estrategia de Medios & Experiencia IA</span>
-            </div>
-        </div>
-    </a>
-</div>
 
-        <h2 class="section-title">Estrategia Inmobiliaria</h2>
+            <div class="project-card">
+                <a href="/palomaaguado.github.io/es/caixabank.html">
+                    <img src="/palomaaguado.github.io/es/proyectos/caixa1.png" alt="CaixaBank Case Study">
+                    <div class="overlay">
+                        <div class="text">
+                            CaixaBank: Vive la Música<br>
+                            <span>Estrategia de Medios & Experiencia IA</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div> <h2 class="section-title">Estrategia Inmobiliaria</h2>
         <div class="gallery-grid">
             <div class="project-card">
                 <a href="/palomaaguado.github.io/es/cafur.html">
@@ -169,7 +170,7 @@
 
             <div class="project-card">
                 <a href="/palomaaguado.github.io/es/cuento-alexa.html">
-                    <img src="../es/proyectos/alexa1.png" alt="Alexa - Cuento Ilustrado">
+                    <img src="/palomaaguado.github.io/es/proyectos/alexa1.png" alt="Alexa - Cuento Ilustrado">
                     <div class="overlay">
                         <div class="text">
                             Alexa<br>
