--- a/es/index.html
+++ b/es/index.html
@@ -106,7 +106,7 @@
         <div class="gallery-grid">
             <div class="project-card">
                 <a href="/palomaaguado.github.io/es/mazda.html">
-                    <img src="/palomaaguado.github.io/es/proyectos/mazda1.png" alt="Mazda Case Study"> 
+                    <img src="/palomaaguado.github.io/es/proyectos/mazda1.jpg" alt="Mazda Case Study"> 
                     <div class="overlay">
                         <div class="text">
                             Mazda Skyactiv-X<br>
