--- a/es/index.html
+++ b/es/index.html
@@ -117,7 +117,7 @@
             </div>
 
             <div class="project-card">
-                <a href="/palomaaguado.github.io/es/caixabank.html">
+                <a href="/palomaaguado.github.io/es/caixa.html">
                     <img src="/palomaaguado.github.io/es/proyectos/caixa1.png" alt="CaixaBank Case Study">
                     <div class="overlay">
                         <div class="text">
