--- a/es/index.html
+++ b/es/index.html
@@ -118,7 +118,7 @@
 
             <div class="project-card">
                 <a href="/palomaaguado.github.io/es/caixa.html">
-                    <img src="/palomaaguado.github.io/es/proyectos/caixa1.png" alt="CaixaBank Case Study">
+                    <img src="/palomaaguado.github.io/es/proyectos/caixa1.jpg" alt="CaixaBank Case Study">
                     <div class="overlay">
                         <div class="text">
                             CaixaBank: Vive la Música<br>
