--- a/es/caixa.html
+++ b/es/caixa.html
@@ -100,7 +100,7 @@
             <img src="../es/proyectos/caixa5.jpg" alt="ImaginCafé">
             <img src="../es/proyectos/caixa8.jpg" alt="Detalle Branding">
                         
-            <img src="../es/proyectos/caixa7.png" class="full" alt="Plan de Medios">
+            <img src="../es/proyectos/caixa7.jpg class="full" alt="Plan de Medios">
         </section>
     </main>
 
