--- a/es/index.html
+++ b/es/index.html
@@ -140,7 +140,7 @@
     
     <div class="project-card carousel-card">
         <a href="/palomaaguado.github.io/es/mazda.html">
-            <img src="/palomaaguado.github.io/es/proyectos/mazda1.png" alt="Mazda">
+            <img src="/palomaaguado.github.io/es/proyectos/mazda1.jpg" alt="Mazda">
             <div class="overlay">
                 <div class="text">Mazda Skyactiv-X<br><span>Estrategia de Medios</span></div>
             </div>
