--- a/es/index.html
+++ b/es/index.html
@@ -103,67 +103,132 @@
         </div> 
 
        <style>
-    /* Estilo específico para el carrusel de Publicidad */
+  <style>
+    /* Contenedor principal del carrusel */
+    .carousel-wrapper {
+        position: relative;
+        padding: 0 40px; /* Espacio para que las flechas no pisen las fotos */
+        margin-bottom: 80px;
+    }
+
+    /* El contenedor que se desliza */
     .carousel-container {
         display: flex;
-        overflow-x: auto;
+        overflow-x: hidden; /* Escondemos la barra para usar las flechas */
+        scroll-behavior: smooth;
         gap: 20px;
-        padding: 0 5% 50px 5%;
-        scroll-snap-type: x mandatory; /* Hace que las tarjetas se "ajusten" al desplazarse */
-        -webkit-overflow-scrolling: touch;
+        padding: 10px 0;
     }
 
-    .carousel-container::-webkit-scrollbar {
-        height: 8px;
-    }
-
-    .carousel-container::-webkit-scrollbar-thumb {
-        background: #ccc;
-        border-radius: 10px;
-    }
-
+    /* Tarjetas del carrusel */
     .carousel-card {
-        flex: 0 0 45%; /* Cada tarjeta ocupa el 45% del ancho para que se vea la siguiente */
-        scroll-snap-align: start;
+        flex: 0 0 calc(50% - 10px); /* 2 por fila en PC */
         height: 500px;
         position: relative;
         overflow: hidden;
     }
 
+    /* Botones/Flechas */
+    .nav-btn {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background: #2c2c2c;
+        color: white;
+        border: none;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        cursor: pointer;
+        z-index: 10;
+        font-size: 1.2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s ease;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    .nav-btn:hover {
+        background: #000;
+        transform: translateY(-50%) scale(1.1);
+    }
+
+    .prev-btn { left: 0; }
+    .next-btn { right: 0; }
+
+    /* Ajuste para móviles */
     @media (max-width: 768px) {
-        .carousel-card { flex: 0 0 85%; height: 350px; }
+        .carousel-wrapper { padding: 0 10px; }
+        .carousel-card { flex: 0 0 100%; height: 400px; }
+        .nav-btn { 
+            width: 40px; 
+            height: 40px; 
+            background: rgba(44, 44, 44, 0.6); /* Más sutil en móvil */
+        }
+        .prev-btn { left: 5px; }
+        .next-btn { right: 5px; }
     }
 </style>
 
 <h2 class="section-title">Publicidad & Casos de Estudio</h2>
-<div class="carousel-container">
-    
-    <div class="project-card carousel-card">
-        <a href="/palomaaguado.github.io/es/mazda.html">
-            <img src="/palomaaguado.github.io/es/proyectos/mazda1.jpg" alt="Mazda">
-            <div class="overlay">
-                <div class="text">Mazda Skyactiv-X<br><span>Estrategia de Medios</span></div>
-            </div>
-        </a>
-    </div>
 
-    <div class="project-card carousel-card">
-        <a href="/palomaaguado.github.io/es/caixa.html">
-            <img src="/palomaaguado.github.io/es/proyectos/caixa1.jpg" alt="CaixaBank">
-            <div class="overlay">
-                <div class="text">CaixaBank: Vive la Música<br><span>Estrategia & IA</span></div>
-            </div>
-        </a>
-    </div>
+<div class="carousel-wrapper">
+    <button class="nav-btn prev-btn" onclick="moveSlide(-1)" aria-label="Anterior">&#10094;</button>
+    <button class="nav-btn next-btn" onclick="moveSlide(1)" aria-label="Siguiente">&#10095;</button>
 
-    <div class="project-card carousel-card">
-        <a href="/palomaaguado.github.io/es/suchard.html">
-            <img src="/palomaaguado.github.io/es/proyectos/suchard1.jpg" alt="Suchard">
-            <div class="overlay">
-                <div class="text">Suchard: Cacao Real<br><span>Campaña 2024</span></div>
-            </div>
-        </a>
+    <div class="carousel-container" id="ads-carousel">
+        
+        <div class="project-card carousel-card">
+            <a href="/palomaaguado.github.io/es/mazda.html">
+                <img src="/palomaaguado.github.io/es/proyectos/mazda1.jpg" alt="Mazda">
+                <div class="overlay">
+                    <div class="text">
+                        Mazda Skyactiv-X<br>
+                        <span>Estrategia de Medios</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="project-card carousel-card">
+            <a href="/palomaaguado.github.io/es/caixabank.html">
+                <img src="/palomaaguado.github.io/es/proyectos/caixa1.jpg" alt="CaixaBank">
+                <div class="overlay">
+                    <div class="text">
+                        CaixaBank: Vive la Música<br>
+                        <span>Estrategia & IA</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="project-card carousel-card">
+            <a href="/palomaaguado.github.io/es/suchard.html">
+                <img src="/palomaaguado.github.io/es/proyectos/suchard1.jpg" alt="Suchard">
+                <div class="overlay">
+                    <div class="text">
+                        Suchard: Cacao Real<br>
+                        <span>Campaña Chocolate Negro</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+
     </div>
+</div>
+
+<script>
+    function moveSlide(direction) {
+        const slider = document.getElementById('ads-carousel');
+        // Calculamos el ancho de una tarjeta para que el desplazamiento sea exacto
+        const cardWidth = slider.querySelector('.carousel-card').offsetWidth + 20; 
+        slider.scrollBy({
+            left: direction * cardWidth,
+            behavior: 'smooth'
+        });
+    }
+</script>
 
 </div>
         </div> <h2 class="section-title">Estrategia Inmobiliaria</h2>
