--- a/es/suchard.html
+++ b/es/suchard.html
@@ -75,13 +75,9 @@
         </section>
 
         <section class="gallery">
-            <img src="../es/proyectos/suchard2.jpg" alt="Investigación">
-            <img src="../es/proyectos/suchard3.jpg" alt="Nuevo Packaging">
-            <img src="../es/proyectos/suchard4.jpg" class="full" alt="Mupis Exterior">
-            <img src="../es/proyectos/suchard5.jpg" alt="TikTok Ads">
-            <img src="../es/proyectos/suchard8.jpg" alt="Campaña Social">
-            <img src="../es/proyectos/suchard7.jpg" class="full" alt="Timing Medios">
-        </section>
+            <img src="../es/proyectos/suchard-packaging.jpg" alt="Nuevo Packaging">
+            <img src="../es/proyectos/suchard-mupi.jpg" class="full" alt="Mupis Exterior">
+           </section>
     </main>
 
     <footer><p>© 2026 Paloma Aguado</p></footer>
