--- a/es/index.html
+++ b/es/index.html
@@ -192,7 +192,7 @@
         </div>
 
         <div class="project-card carousel-card">
-            <a href="/palomaaguado.github.io/es/caixabank.html">
+            <a href="/palomaaguado.github.io/es/caixa.html">
                 <img src="/palomaaguado.github.io/es/proyectos/caixa1.jpg" alt="CaixaBank">
                 <div class="overlay">
                     <div class="text">
@@ -205,7 +205,7 @@
 
         <div class="project-card carousel-card">
             <a href="/palomaaguado.github.io/es/suchard.html">
-                <img src="/palomaaguado.github.io/es/proyectos/suchard1.jpg" alt="Suchard">
+                <img src="/palomaaguado.github.io/es/proyectos/sSUchard.jpg" alt="Suchard">
                 <div class="overlay">
                     <div class="text">
                         Suchard: Cacao Real<br>
