--- a/es/index.html
+++ b/es/index.html
@@ -152,6 +152,17 @@
                         <div class="overlay"><div class="text">Suchard: Cacao Real<br><span>Campaña Chocolate Negro</span></div></div>
                     </a>
                 </div>
+                <div class="project-card carousel-card">
+    <a href="/palomaaguado.github.io/es/correos.html">
+        <img src="/palomaaguado.github.io/es/proyectos/correos.jpg" alt="Correos Market">
+        <div class="overlay">
+            <div class="text">
+                Correos Market<br>
+                <span>Plan de Medios Gen Z</span>
+            </div>
+        </div>
+    </a>
+</div>
             </div>
         </div>
 
