--- a/es/correos.html
+++ b/es/correos.html
@@ -21,7 +21,7 @@
         .hero {
             height: 70vh;
             background: linear-gradient(rgba(0, 49, 104, 0.7), rgba(0, 49, 104, 0.7)), 
-                        url('../es/proyectos/correos1.jpg') center/cover;
+                        url('../es/proyectos/correos.jpg') center/cover;
             display: flex; flex-direction: column; justify-content: center; align-items: center;
             color: white; text-align: center;
         }
