--- a/es/index.html
+++ b/es/index.html
@@ -163,6 +163,17 @@
         </div>
     </a>
 </div>
+                <div class="project-card carousel-card">
+    <a href="/palomaaguado.github.io/es/balenciaga.html">
+        <img src="/palomaaguado.github.io/es/proyectos/balenciaga.jpg" alt="Balenciaga Neuromarketing">
+        <div class="overlay">
+            <div class="text">
+                Balenciaga Case Study<br>
+                <span>Neuromarketing & Ética</span>
+            </div>
+        </div>
+    </a>
+</div>
             </div>
         </div>
 
