--- a/es/index.html
+++ b/es/index.html
@@ -174,6 +174,17 @@
         </div>
     </a>
 </div>
+                <div class="project-card carousel-card">
+    <a href="/palomaaguado.github.io/es/vegalia.html">
+        <img src="/palomaaguado.github.io/es/proyectos/vegalia.jpg" alt="Vegalia">
+        <div class="overlay">
+            <div class="text">
+                Vegalia <br>
+                <span>Estrategia & Posicionamiento</span>
+            </div>
+        </div>
+    </a>
+</div>
             </div>
         </div>
 
