--- a/es/index.html
+++ b/es/index.html
@@ -185,6 +185,17 @@
         </div>
     </a>
 </div>
+                <div class="project-card carousel-card">
+    <a href="/palomaaguado.github.io/es/once.html">
+        <img src="/palomaaguado.github.io/es/proyectos/once-hero.jpg" alt="Proyecto ONCE">
+        <div class="overlay">
+            <div class="text">
+                ONCE: Plan de Marketing<br>
+                <span>Estrategia de Medios & KPIs</span>
+            </div>
+        </div>
+    </a>
+</div>
             </div>
         </div>
 
