--- a/es/index.html
+++ b/es/index.html
@@ -187,7 +187,7 @@
 </div>
                 <div class="project-card carousel-card">
     <a href="/palomaaguado.github.io/es/once.html">
-        <img src="/palomaaguado.github.io/es/proyectos/once-hero.jpg" alt="Proyecto ONCE">
+        <img src="/palomaaguado.github.io/es/proyectos/once.jpg" alt="Proyecto ONCE">
         <div class="overlay">
             <div class="text">
                 ONCE: Plan de Marketing<br>
