--- a/es/index.html
+++ b/es/index.html
@@ -196,6 +196,17 @@
         </div>
     </a>
 </div>
+                <div class="project-card carousel-card">
+    <a href="/palomaaguado.github.io/es/cinemad.html">
+        <img src="/palomaaguado.github.io/es/proyectos/cinemad.jpg" alt="Cinemad+">
+        <div class="overlay">
+            <div class="text">
+                Cinemad+ Email Marketing<br>
+                <span>Fidelización & CRM</span>
+            </div>
+        </div>
+    </a>
+</div>
             </div>
         </div>
 
