--- a/es/cinemad.html
+++ b/es/cinemad.html
@@ -61,7 +61,7 @@
         <section class="project-meta">
             <div class="meta-item"><h4>Estrategia</h4><p>Fidelización y Captación</p></div>
             <div class="meta-item"><h4>Canales</h4><p>Newsletter, Landing Page, App</p></div>
-            <div class="meta-item"><h4>Club</h4><p>Sistema de Niveles (Dorado, Plata, Cobre)</p></div>
+            <div class="meta-item"><h4>Club</h4><p>Sistema de Niveles (Oro, Plata, Bronce)</p></div>
             <div class="meta-item"><h4>Software</h4><p>Email Marketing Automation</p></div>
         </section>
 
@@ -72,15 +72,14 @@
 
         <section class="concept-box">
             <h3>Fidelización por Gamificación</h3>
-            <p>Implementación de un sistema de recompensas donde los usuarios escalan categorías (Cobre, Plateado, Dorado) según su consumo, incentivando la descarga de la App y el registro en la Newsletter mediante beneficios exclusivos.</p>
+            <p>Implementación de un sistema de recompensas donde los usuarios escalan categorías (Bronce, Plata, Oro) según su consumo, incentivando la descarga de la App y el registro en la Newsletter mediante beneficios exclusivos.</p>
         </section>
 
         <section class="gallery">
             <img src="../es/proyectos/cinemad-captacion.jpg" alt="Estrategia de Captación">
             <img src="../es/proyectos/cinemad-landing.jpg" alt="Diseño de Landing Page y App">
             <img src="../es/proyectos/cinemad-newsletter.jpg" class="full" alt="Diseño de Newsletter y Promociones">
-            <img src="../es/proyectos/cinemad-niveles.jpg" class="full" alt="Sistema de Fidelización por Niveles">
-        </section>
+           </section>
     </main>
 
     <footer><p>© 2026 Paloma Aguado - Email Marketing Case Study</p></footer>
