--- a/es/cinemad.html
+++ b/es/cinemad.html
@@ -19,8 +19,9 @@
 
         .hero {
             height: 70vh;
+            /* SE HA CORREGIDO A cinemad.jpg */
             background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-                        url('../es/proyectos/cinemad-hero.jpg') center/cover;
+                        url('../es/proyectos/cinemad.jpg') center/cover;
             display: flex; flex-direction: column; justify-content: center; align-items: center;
             color: white; text-align: center;
         }
@@ -79,7 +80,7 @@
             <img src="../es/proyectos/cinemad-captacion.jpg" alt="Estrategia de Captación">
             <img src="../es/proyectos/cinemad-landing.jpg" alt="Diseño de Landing Page y App">
             <img src="../es/proyectos/cinemad-newsletter.jpg" class="full" alt="Diseño de Newsletter y Promociones">
-           </section>
+        </section>
     </main>
 
     <footer><p>© 2026 Paloma Aguado - Email Marketing Case Study</p></footer>
