--- a/es/index.html
+++ b/es/index.html
@@ -207,6 +207,17 @@
         </div>
     </a>
 </div>
+                <div class="project-card carousel-card">
+    <a href="/palomaaguado.github.io/es/lidl.html">
+        <img src="/palomaaguado.github.io/es/proyectos/lidl.jpg" alt="Lidl Case Study">
+        <div class="overlay">
+            <div class="text">
+                Lidl: E-commerce Strategy<br>
+                <span>UX & Transformación Digital</span>
+            </div>
+        </div>
+    </a>
+</div>
             </div>
         </div>
 
