--- a/es/lidl.html
+++ b/es/lidl.html
@@ -90,6 +90,7 @@
             <img src="../es/proyectos/lidl-investigacion.jpg" alt="Investigación de mercado E-commerce">
             <img src="../es/proyectos/lidl-web.jpg" alt="Rediseño Web User Friendly">
             <img src="../es/proyectos/lidl-app.jpg" alt="Optimización App Mobile">
+            <img src="../es/proyectos/lidl-cupon.jpg" alt="Cupones y ofertas">
             <img src="../es/proyectos/lidl-email.jpg" class="full" alt="Estrategia de Email Marketing">
         </section>
     </main>
