--- a/es/index.html
+++ b/es/index.html
@@ -218,6 +218,17 @@
         </div>
     </a>
 </div>
+                <div class="project-card carousel-card">
+    <a href="/palomaaguado.github.io/es/asisa.html">
+        <img src="/palomaaguado.github.io/es/proyectos/asisa.jpg" alt="Asisa Case Study">
+        <div class="overlay">
+            <div class="text">
+                Asisa: "Mejor Así"<br>
+                <span>Campaña 360º & Medios</span>
+            </div>
+        </div>
+    </a>
+</div>
             </div>
         </div>
 
