--- a/es/asisa.html
+++ b/es/asisa.html
@@ -107,7 +107,8 @@
         </section>
 
         <section class="gallery">
-            <img src="../es/proyectos/asisa-investigacion.jpg" alt="Investigación y Objetivos">
+            <img src="../es/proyectos/asisa-oms.jpg" alt="Investigación y Objetivos">
+            <img src="../es/proyectos/asisa-insight.jpg" alt="Investigación y Objetivos">
             <img src="../es/proyectos/asisa-merchan.jpg" alt="Acciones de Guerrilla y Merchandising">
             <img src="../es/proyectos/asisa-cartel.jpg" class="full" alt="Planificación de Medios y Presupuestos">
             <img src="../es/proyectos/asisa-medios.jpg" alt="Estrategia en Redes Sociales">
