--- a/es/index.html
+++ b/es/index.html
@@ -231,7 +231,19 @@
 </div>
             </div>
         </div>
-
+<section class="tfm-highlight">
+    <div class="tfm-content">
+        <div class="tfm-text">
+            <span class="badge">Research & Strategy</span>
+            <h2>La Publicidad en el Streaming</h2>
+            <p>Un análisis profundo sobre el cambio de paradigma en plataformas como Netflix, Disney+ y HBO. Una investigación interactiva sobre el futuro de los anuncios en el VOD.</p>
+            <a href="es/tfm.html" class="btn-interactivo">EXPLORAR INVESTIGACIÓN</a>
+        </div>
+        <div class="tfm-visual">
+            <img src="es/proyectos/tfm-perfiles-mockup.jpg" alt="TFM Paloma Aguado">
+        </div>
+    </div>
+</section>
         <h2 class="section-title">Estrategia Inmobiliaria</h2>
         <div class="gallery-grid">
             <div class="project-card">
