--- a/es/index.html
+++ b/es/index.html
@@ -237,10 +237,10 @@
             <span class="badge">Research & Strategy</span>
             <h2>La Publicidad en el Streaming</h2>
             <p>Un análisis profundo sobre el cambio de paradigma en plataformas como Netflix, Disney+ y HBO. Una investigación interactiva sobre el futuro de los anuncios en el VOD.</p>
-            <a href="es/tfm.html" class="btn-interactivo">EXPLORAR INVESTIGACIÓN</a>
+            <a href="/palomaaguado.github.io/es/tfm.html" class="btn-interactivo">EXPLORAR INVESTIGACIÓN</a>
         </div>
         <div class="tfm-visual">
-            <img src="es/proyectos/tfm-perfiles-mockup.jpg" alt="TFM Paloma Aguado">
+            <img src="es/proyectos/perfil-paloma.jpg" alt="TFM Paloma Aguado">
         </div>
     </div>
 </section>
