--- a/es/index.html
+++ b/es/index.html
@@ -234,6 +234,9 @@
 <section class="tfm-highlight">
     <div class="tfm-content">
         <div class="tfm-text">
+             <h2 class="section-title">Investigación y Estrategia</h2>
+        <div class="gallery-grid">
+            <div class="project-card">
             <span class="badge">Research & Strategy</span>
             <h2>La Publicidad en el Streaming</h2>
             <p>Un análisis profundo sobre el cambio de paradigma en plataformas como Netflix, Disney+ y HBO. Una investigación interactiva sobre el futuro de los anuncios en el VOD.</p>
@@ -241,6 +244,9 @@
         </div>
         <div class="tfm-visual">
             <img src="es/proyectos/perfil-paloma.jpg" alt="TFM Paloma Aguado">
+             <div class="overlay"><div class="text">TFM<br><span>Publicidad en las plataformas streaming</span></div></div>
+                </a>
+            </div>
         </div>
     </div>
 </section>
